--- a/behivorDemo/src/main/res/layout/activity_register.xml
+++ b/behivorDemo/src/main/res/layout/activity_register.xml
@@ -40,7 +40,8 @@
                 android:id="@+id/btn_like_comment"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:text="upload Behavior" android:layout_height="32dp"/>
+                android:text="upload Behavior"
+        />
 
         <Button
                 android:id="@+id/btn_ads"
@@ -58,6 +59,7 @@
             android:elevation="6dp"
             android:hint="@string/display_result"
             android:padding="@dimen/margin_half"
+            android:textIsSelectable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
