--- a/behivorDemo/src/main/res/layout/activity_behavior.xml
+++ b/behivorDemo/src/main/res/layout/activity_behavior.xml
@@ -17,7 +17,7 @@
         <TextView
                 android:id="@+id/main_msg_tv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:background="@color/white"
                 android:elevation="6dp"
                 android:gravity="center"
