--- a/payDemo/src/main/res/layout/activity_cart.xml
+++ b/payDemo/src/main/res/layout/activity_cart.xml
@@ -10,7 +10,7 @@
 
     <include layout="@layout/appbar_layout"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_marginLeft="@dimen/margin_normal"
             android:layout_marginRight="@dimen/margin_normal"
             android:layout_width="match_parent"
