--- a/payDemo/src/main/res/layout/activity_checkout.xml
+++ b/payDemo/src/main/res/layout/activity_checkout.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/appbar_layout"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:id="@+id/checkout_rv"
             android:layout_marginLeft="@dimen/margin_normal"
