--- a/behavior/src/main/res/values/dimens.xml
+++ b/behavior/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
 
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="text_size_big">18sp</dimen>
+
+    <dimen name="radius_value">12dp</dimen>
+
 </resources>
